# rush

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml  template.rsh  test.example
char_reader/: Cargo.toml
char_reader/src/: lib.rs
core/src/: lib.rs  tracker.rs
crates/arg_parser/: Cargo.toml
crates/arg_parser/src/: lib.rs
crates/call_command/: Cargo.toml
crates/call_command/src/: lib.rs
crates/char_reader/src/: error.rs  lib.rs
crates/command_utils/: Cargo.toml
crates/command_utils/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: cd.rs  clear.rs  exit.rs  gc.rs  get.rs  lib.rs  set.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: fbuf.rs  lib.rs  strstate.rs  token.rs
crates/parser/src/: lib.rs
crates/return_structure/: Cargo.toml
crates/return_structure/src/: lib.rs
crates/rush-base/: Cargo.toml
crates/rush-base/src/: lib.rs
crates/rush-core/src/: error.rs  errors.rs  lib.rs
crates/rush-errors/: Cargo.toml
crates/rush-errors/src/: lib.rs
crates/rush-parser/: Cargo.toml
crates/rush-parser/src/: dtype.rs  lib.rs
crates/rush-parser/src/parsers/: lexer.rs  mod.rs  syntree.rs
crates/rush-parser/src/parsers/syntree/: mod.rs  treeir.rs  treenode.rs
crates/rush-parser/src/parsers/syntree/treeir/: irepr.rs  mod.rs  node.rs
crates/rush-utils/: Cargo.toml
crates/rush-utils/src/: lexer.rs  lib.rs  token.rs
crates/shell-props/: Cargo.toml
crates/shell-props/src/: lib.rs
crates/trait-macros/: Cargo.toml
crates/trait-macros/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: error.rs  lib.rs  state.rs  strstate.rs  token.rs
lexer/src/token/: delimitter.rs  identifier.rs  keyword.rs  literal.rs  mod.rs  operator.rs
parser/: Cargo.toml
parser/src/: error.rs  expression.rs  lib.rs  statement.rs
rush-core/: Cargo.toml
rush-core/src/: lazybuf.rs  lib.rs
src/: main.rs
src/utils/: processor.rs
src/utils/string_utils/: splitters.rs
(+5 files in other folders)
