[package]
name = "rush"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/lexer",
    "crates/parser",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }

[dependencies.lexer]
path = "./crates/lexer"

[dependencies.parser]
path = "./crates/parser"
