[package]
name = "rush"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
lto = "thin"

[profile.release]
overflow-checks = true
lto = "fat"

[workspace]
members = [
    "crates/lexer",
    "crates/parser",
    "crates/char_reader"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
lexer  = { path = "./crates/lexer" }
parser = { path = "./crates/parser" }
char_reader = { path = "crates/char_reader" }
