[package]
name = "rush"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
lto = "thin"

[profile.release]
overflow-checks = true
lto = "fat"

[workspace]
members = [
    "lexer",
    "parser",
    "char_reader",
    "core"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
lexer  = { path = "lexer" }
parser = { path = "parser" }
char_reader = { path = "char_reader" }
core = { path = "core" }
