[package]
name = "rush-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
derive_builder = "0.11.0"
rush-core = { path = "../rush-core", version = "0.1.0" }
